# ClicksAndGo

./: .dockerignore  .gitignore  Dockerfile  arquitectura_click_and_go.txt  contexto_total.txt  esquema_postgres.sql
clicks-agent/: .env#  .gitignore  Cargo.toml
clicks-agent/src/: main.rs  models.rs  traits.rs
clicks-agent/src/agents/: backend.rs  devops.rs  market_hunter.rs  mod.rs
clicks-agent/src/providers/: ai_evaluator.rs  database.rs  mod.rs  mongo.rs
web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/src/agents/: types.ts
web/src/agents/core/: BaseFrontendAgent.ts
web/src/agents/ui/: FrontendUIAgent.ts
web/src/agents/ux/: FrontendUXAgent.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/api/agente-ux/: route.ts
web/src/app/api/notebooks/: route.ts
web/src/app/api/stats/: route.ts
web/src/components/: AIDealsSection.tsx  HeroSection.tsx  LaptopCard.tsx  SkeletonCard.tsx
web/src/lib/: mock-data.ts
web/src/types/: laptop.ts
